--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.13.0"
   },
   "devDependencies": {
